-
Bug
-
Resolution: Done
-
P2: Important
-
5.4.0
-
20
-
41f496cb7f63da012f73bfe7904c225e91d300da
spin boxes confuse screen readers on various platforms since they show up in the old msaa style as being 3 elements.
- relates to
-
QTBUG-39442 Inconsistent behaviour with spin boxes on linux with orca
-
- Closed
-
For Gerrit Dashboard: QTBUG-39861 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
88674,8 | Accessibility: QSpinBox should not have any children | dev | qt/qtbase | Status: ABANDONED | -2 | 0 |
91955,2 | Accessibility: QSpinBox should not have any children | 5.4 | qt/qtbase | Status: MERGED | +2 | 0 |